# encrypt-app

./: Cargo.toml  README.md
crates/desktop-app/: Cargo.toml  build.rs
crates/desktop-app/src/: app.rs  branding.rs  browser.rs  dialogs.rs  formatting.rs  main.rs  settings.rs  style.rs  view.rs
crates/desktop-app/src/app/: message.rs  operations.rs  state.rs  subscription.rs  update.rs
crates/desktop-app/src/view/: file_operations.rs  header.rs  health.rs  progress.rs  status.rs  vault_contents.rs  vault_controls.rs  vault_management.rs
crates/vault-core/: Cargo.toml
crates/vault-core/src/: backend.rs  config.rs  crypto.rs  error.rs  health.rs  index.rs  lib.rs  mount.rs  paths.rs
crates/vault-core/tests/: crypto_and_vault.rs  health_tests.rs
packaging/windows/: README-WINDOWS.txt  installer.iss
scripts/: package-installer.ps1  package-windows.ps1
