[workspace]
members = [
    "crates/vault-core",
    "crates/desktop-app",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
argon2 = "0.5.3"
base64 = "0.22.1"
chacha20poly1305 = "0.10.1"
chrono = { version = "0.4.38", default-features = false, features = ["clock", "serde"] }
hex = "0.4.3"
fs2 = "0.4.3"
iced = { version = "0.13.1", default-features = true, features = ["tokio", "lazy"] }
rand = "0.8.5"
rfd = "0.15.1"
secrecy = "0.8.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
sha2 = "0.10.8"
tempfile = "3.14.0"
thiserror = "2.0.3"
tokio = { version = "1.42.0", features = ["rt"] }
walkdir = "2.5.0"
zeroize = { version = "1.8.1", features = ["zeroize_derive"] }
